Added all controllers for rounds and layed out main view

--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,1 +1,7 @@
 <h1>hi</h1>
+<% @po_Pointsdata.each do |row| %>
+	<p><%= row["PLAYER"] %></p>
+	<p><%= row["PTS"] %>
+<% end %>
+
+<p><%= @po_pts_name_array %></p>
