--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,66 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<!-- HEADER and NAV -->	
+<div class="container">
+<div class="full-header">
+  <div class="page-id-header">
+     <p>Hoop Helix</p>
+  </div>
+  <div class="player-page-name">
+    <p>2015 PLAYOFFS: <strong><%= @po_playerdata[0]["DISPLAY_FIRST_LAST"] %></strong></p>
+  </div>
+    <!-- Player Info -->
+    <div class="row player-well">
+    <div class="col-md-3 col-md-offset-1 player-page-profile">
+      <div style="width: 100%">
+      <img src="http://stats.nba.com/media/players/230x185/<%= @po_playerdata[0]["PERSON_ID"] %>.png" width="200px">
+      </div>
+    </div> 
+	
+    <div class="col-md-3 player-page-info">
+      <p><%= (@po_PlayerTotalsdata[0]["PTS"]/ @po_PlayerTotalsdata[0]["GP"].to_f).round(1) %> PTS / <%= (@po_PlayerTotalsdata[0]["REB"]/ @po_PlayerTotalsdata[0]["GP"].to_f).round(1) %> REB / <%= (@po_PlayerTotalsdata[0]["AST"]/ @po_PlayerTotalsdata[0]["GP"].to_f).round(1) %> AST</p>
+      <img src="http://stats.nba.com/media/img/teams/logos/<%= @po_playerdata[0]["TEAM_ABBREVIATION"] %>_logo.svg" width="90" style="float:left;">
+      <h5><%= @po_playerdata[0]["TEAM_CITY"] %> <%= @po_playerdata[0]["TEAM_NAME"] %>
+      </h5>
+      <h5>Pos: <%= @po_playerdata[0]["POSITION"] %> | Exp: <%= @po_playerdata[0]["SEASON_EXP"] %> yrs</h5>
+      
+      <h5>Record: <%= @po_playerteamdata[0]["W"] %>W - <%= @po_playerteamdata[0]["L"] %>L</h5>
+      <h5>Games Played: <%= @po_PlayerTotalsdata[0]["GP"] %></h5>
+  	
+    </div>
+    <div class="col-md-3 player-page-buttons"> 
+    <ul class="nav nav-pills nav-stacked">
+  	  <li class="<%= 'active' if current_page?(controller: 'players', action: 'show') %>" role="presentation" id="all"><a href="/players/<%= @po_playerdata[0]["PERSON_ID"] %>">All</a></li>	
+      <% if @rd_player_dashboard_totals.body["resultSets"][0]["rowSet"] != [] %>
+	      <li class="<%= 'active' if current_page?(controller: 'rounds', action: 'show') %>" role="presentation" id="round1"><a href="/players/round1/<%= @po_playerdata[0]["PERSON_ID"] %>">Round 1</a></li>
+      <% end %>
+      <% if @sf_player_dashboard_totals.body["resultSets"][0]["rowSet"] != [] %>
+	      <li class="<%= 'active' if current_page?(controller: 'semifinals', action: 'show') %>" role="presentation" id="semis"><a href="/players/semis/<%= @po_playerdata[0]["PERSON_ID"] %>">Semifinals</a></li>
+      <% end %>
+      <% if @cf_player_dashboard_totals.body["resultSets"][0]["rowSet"] != [] %>
+	      <li class="<%= 'active' if current_page?(controller: 'conffinals', action: 'show') %>" role="presentation" id="conffinals"><a href="/players/conf_finals/<%= @po_playerdata[0]["PERSON_ID"] %>">Conference Finals</a></li>
+      <% end %> 
+      <% if @f_player_dashboard_totals.body["resultSets"][0]["rowSet"] != [] %>
+	      <li class="<%= 'active' if current_page?(controller: 'finals', action: 'show') %>" role="presentation" id="finals"><a href="/players/finals/<%= @po_playerdata[0]["PERSON_ID"] %>">Finals</a></li>
+	  <% end %>
+    </ul>  	
+    </div>
+
+	</div> <!--end row-->
+    <!-- End Player Info -->
+  <div class="page-sub-nav col-md-12">          
+ 	
+  </div> <!-- End page-sub-nav -->
+</div>
+
 
 <%= yield %>
+</div> <!-- END Container -->
 
+<!-- FOOTER -->
+<div class="footer">
+<p> contact, copy, chicago, nba info, link to bmm and twitter </p>
+</div>
 </body>
 </html>
