--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -1,4 +1,3 @@
-
 <!-- Main Pane -->
 <div class="main">
 	<div class="col-md-8">
@@ -488,12 +487,6 @@
 	</div>
 	
 	<div class="col-md-3 stat-logo">
-		<p>Teams played against, smaller logos</p>
-    		<img src="http://stats.nba.com/media/img/teams/logos/<%= @po_playerdata[0]["TEAM_ABBREVIATION"] %>_logo.svg" width="90">
-    	<p>will link to round</p>
-    	<% @po_team_rosters_array.each do |hash| %>
-    	<p><a href="/players/<%= hash['PLAYER_ID'] %>"><%= hash["PLAYER_NAME"] %></a></p>
-    	<% end %>
-
+		<%= render "test" %>
 	</div>
 </div><!-- END Main Pane -->
