#7 Added teammate and team menus and player header team header and rt sidebar partials and animated preloader

--- a/app/assets/stylesheets/teams.scss
+++ b/app/assets/stylesheets/teams.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the teams controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.team-players-all {
+	padding: 10px 70px;
+}
+
+
+.single-pic {
+	margin-top: 45px;
+	text-align:center;
+}
+
+.single-pic button {
+	background-color: #eee;
+	width: 100%;
+}
