--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -1,5 +1,9 @@
+<%= render 'shared/player_header' %>
 <!-- Main Pane -->
 <div class="main">
+	<div class="page-sub-nav">
+	  <h4>Team Contribution: All<h4>  	
+	</div>
 	<div class="col-md-8">
 	  <!-- MINUTES -->
 	  <div class="row">
@@ -487,6 +491,6 @@
 	</div>
 	
 	<div class="col-md-3 stat-logo">
-		<%= render "test" %>
+		<%= render "shared/rt_sidebar" %>
 	</div>
 </div><!-- END Main Pane -->
