--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,13 +1,18 @@
-.spinner {
-	position:absolute;
-        font-family: FontAwesome;
-        top:0;
-        left:-5px;
-        content: "\25AE";
+#loading {
+    position: absolute;
+    background-color: #fcfcfc;
+    opacity: 0.8;
+    padding: 25% 47%;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    //margin-left: auto;
+    //margin-right: auto;
+    display: none;
 }
 
 .main {
-	margin-top: 70px;
+	margin-top: 0px;
 }
 
 .full-header {
@@ -17,9 +22,10 @@
 }
 
 .page-id-header {
-	width: 100%;
+	//width: 100%;
 	padding: 5px 20px;
-	background-color: #E39D44;	
+	background-color: #E39D44;
+  height:50px;	
 }
 
 .page-id-header p {
@@ -27,6 +33,7 @@
   font-weight: 700;
   padding: 0px;
   text-transform: uppercase;
+  line-height: 45px;
 }
 
 .player-page-name {
@@ -46,10 +53,23 @@
   text-transform: uppercase;
 }
 
+.team-selector {
+  padding: 9px 20px;
+  background-color: #E39D44;
+  height: 50px;
+}
+
+.teammate-selector {
+  height: 45px;
+  border-top: 3px solid #DF8936;
+  background-color: #F9F9F9;
+  padding: 3px 20px;
+}
+
 .player-well {
    //box-shadow: 0px 2px 10px #AD885E;
 	//background-color: #F9F9F9;
-	//border-bottom: 3px solid #777;
+	
 	
 	margin: 0px;
 }
@@ -59,10 +79,18 @@
   //background-color: #F9F9F9;
   padding: 3px 0px;
   height: 45px;
-  border-top: 2px solid #F9F9F9;
-  text-align: center;
+  border-top: 2px solid #777;
+  padding: 1% 2%;
+  margin-bottom: 20px;
   //border-bottom: 2px solid #DF8936;
   //border-radius: 0px 0px 5px 5px;
+}
+
+.page-sub-nav h4 {
+  font-size: 19px;
+  color: #777;
+  padding: 0px;
+  text-transform: uppercase;
 }
 
 .nav > li > a {
@@ -110,8 +138,12 @@
 }
 
 .stat-logo {
-  margin-top: 30px;
+  margin-top: 20px;
   color: #A0A5AD;
+}
+
+.stat-logo h4 {
+  margin-bottom: 20px;
 }
 
 .stat-name {
@@ -261,6 +293,6 @@
 
 .footer {
 	background-color: #eee;
-	margin-top: 50px;
-	padding: 2% 15%;
+	margin-top: 80px;
+	padding: 5% 15%;
 }
