--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,69 +6,54 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	
+
 </head>
 <body>
-
-<!-- HEADER and NAV -->	
-<div class="container">
-<div class="full-header">
-  <div class="page-id-header">
-     <p>Hoop Helix</p>
-  </div>
-  <div class="player-page-name">
-    <p>2015 PLAYOFFS: <strong><%= @po_playerdata[0]["DISPLAY_FIRST_LAST"] %></strong></p>
-  </div>
-    <!-- Player Info -->
-    <div class="row player-well">
-    <div class="col-md-4 player-page-profile">
-      <div style="width: 100%">
-      <img src="http://stats.nba.com/media/players/230x185/<%= @po_playerdata[0]["PERSON_ID"] %>.png" width="200px">
-      </div>
-    </div> 
-	
-    <div class="col-md-4 player-page-info">
-      <p><%= (@po_PlayerTotalsdata[0]["PTS"]/ @po_PlayerTotalsdata[0]["GP"].to_f).round(1) %> PTS / <%= (@po_PlayerTotalsdata[0]["REB"]/ @po_PlayerTotalsdata[0]["GP"].to_f).round(1) %> REB / <%= (@po_PlayerTotalsdata[0]["AST"]/ @po_PlayerTotalsdata[0]["GP"].to_f).round(1) %> AST</p>
-      <img src="http://stats.nba.com/media/img/teams/logos/<%= @po_playerdata[0]["TEAM_ABBREVIATION"] %>_logo.svg" width="90" style="float:left;">
-      <h5><%= @po_playerdata[0]["TEAM_CITY"] %> <%= @po_playerdata[0]["TEAM_NAME"] %>
-      </h5>
-      <h5>Pos: <%= @po_playerdata[0]["POSITION"] %> | Exp: <%= @po_playerdata[0]["SEASON_EXP"] %> yrs</h5>
-      
-      <h5>Record: <%= @po_playerteamdata[0]["W"] %>W - <%= @po_playerteamdata[0]["L"] %>L</h5>
-      <h5>Games Played: <%= @po_PlayerTotalsdata[0]["GP"] %></h5>
-  	
-    </div>
-    <div class="col-md-3 player-page-buttons"> 
-    <ul class="nav nav-pills nav-stacked">
-  	  <li class="<%= 'active' if current_page?(controller: 'players', action: 'show') %>" role="presentation" id="all"><a href="/players/<%= @po_playerdata[0]["PERSON_ID"] %>">All</a></li>	
-      <% if @rd_player_dashboard_totals.body["resultSets"][0]["rowSet"] != [] %>
-	      <li class="<%= 'active' if current_page?(controller: 'rounds', action: 'show') %>" role="presentation" id="round1"><a href="/players/round1/<%= @po_playerdata[0]["PERSON_ID"] %>">Round 1</a></li>
-      <% end %>
-      <% if @sf_player_dashboard_totals.body["resultSets"][0]["rowSet"] != [] %>
-	      <li class="<%= 'active' if current_page?(controller: 'semifinals', action: 'show') %>" role="presentation" id="semis"><a href="/players/semis/<%= @po_playerdata[0]["PERSON_ID"] %>">Semifinals</a></li>
-      <% end %>
-      <% if @cf_player_dashboard_totals.body["resultSets"][0]["rowSet"] != [] %>
-	      <li class="<%= 'active' if current_page?(controller: 'conffinals', action: 'show') %>" role="presentation" id="conffinals"><a href="/players/conf_finals/<%= @po_playerdata[0]["PERSON_ID"] %>">Conference Finals</a></li>
-      <% end %> 
-      <% if @f_player_dashboard_totals.body["resultSets"][0]["rowSet"] != [] %>
-	      <li class="<%= 'active' if current_page?(controller: 'finals', action: 'show') %>" role="presentation" id="finals"><a href="/players/finals/<%= @po_playerdata[0]["PERSON_ID"] %>">Finals</a></li>
-	  <% end %>
-    </ul>  	
-    </div>
-
-	</div> <!--end row-->
-    <!-- End Player Info -->
-  <div class="page-sub-nav col-md-12">          
-  </div> <!-- End page-sub-nav -->
+<!-- Animated preloader -->
+<div id="loading">
+    <img src="http://www.webdesign.org/img_articles/13053/loading-gif-animation.gif" alt="loading" width="100px" />
+    <p>Player data may take several seconds to load. Thanks for your patience.</p>
 </div>
-
+<div class="container">
 
 <%= yield %>
-</div> <!-- END Container -->
 
+
+</div>
+<!-- END Container -->
+
+<div class="container">
 <!-- FOOTER -->
 <div class="footer">
-<p> contact, copy, chicago, nba info, link to bmm and twitter </p>
+	<h2>HOOP HELIX</h2>
+	<p>Designed and developed by Chicago Public Skills | BlackMambaMyth.com | blackmambamyth@gmail.com</p> 
+<p>Statistics, player photos, and team logos are from NBA.com</p>
 </div>
+<!-- END footer -->
+</div>
+
+<!-- JS for animated preloader -->
+<script>
+function hideLoading() {
+    // other code can be placed here 
+    $("#loading").hide();
+    // other code can be placed here
+}
+
+function showLoading() {
+    // other code can be placed here 
+    $("#loading").show();
+    // other code can be placed here
+}
+
+function dosomething() {
+    showLoading();
+    // simulate a task that can take 3 seconds
+    // afterwards show hide the loading GIF
+    setTimeout("hideLoading()", 10000);
+    return false;
+}
+</script>
 </body>
 </html>
