--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -29,13 +29,10 @@
 		      <p><%= @po_PlayerTotalsdata[0]["MIN"].round %> Minutes</p>
 		    </div>
 		    <div class="col-xs-6 team-data" style="text-align:right">
-		      <p><%= @po_playerteamdata[0]["MIN"].round * 5 %> Minutes</p>
+		      <p><%= @po_playerteamdata[0]["MIN"].round * 5 %> Minutes *</p>
 		    </div>
 		  </div>
 	    </div><!-- END overview-bars -->
-    	<!-- <div class="col-md-3 stat-logo">
-    		<img src="http://stats.nba.com/media/img/teams/logos/<%= @po_playerdata[0]["TEAM_ABBREVIATION"] %>_logo.svg" width="90">
-    	</div> -->
 	  </div><!-- END MINUTES -->
 
 	   <!-- TOUCHES -->
