--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -2,13 +2,26 @@
     position: absolute;
     background-color: #fcfcfc;
     opacity: 0.8;
-    padding: 25% 47%;
+    padding: 20%;
     width: 100%;
     height: 100%;
     z-index: 999;
-    //margin-left: auto;
-    //margin-right: auto;
+    text-align: center;
     display: none;
+}
+
+#loading img {
+  width: 100px;
+}
+
+#message {
+text-align: center;
+  position: absolute;
+  padding: 40% 10%;
+  color: black;
+  z-index: 1000;
+  width: 100%;
+  display: none;
 }
 
 .main {
