--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,12 @@
 <body>
 <!-- Animated preloader -->
 <div id="loading">
-    <img src="http://www.webdesign.org/img_articles/13053/loading-gif-animation.gif" alt="loading" width="100px" />
-    <p>Player data may take several seconds to load. Thanks for your patience.</p>
+    <img src="http://www.webdesign.org/img_articles/13053/loading-gif-animation.gif" alt="loading" />
 </div>
+ <div id="message">   
+   <h1 class="alert alert-info">Player data may take several seconds to load.<br/>Thanks for your patience.</h1>
+</div>
+
 <div class="container">
 
 <%= yield %>
@@ -38,12 +41,14 @@
 function hideLoading() {
     // other code can be placed here 
     $("#loading").hide();
+    $("#message").hide();
     // other code can be placed here
 }
 
 function showLoading() {
     // other code can be placed here 
     $("#loading").show();
+    $("#message").show();
     // other code can be placed here
 }
 
@@ -51,7 +56,7 @@ function dosomething() {
     showLoading();
     // simulate a task that can take 3 seconds
     // afterwards show hide the loading GIF
-    setTimeout("hideLoading()", 10000);
+    setTimeout("hideLoading()", 20000);
     return false;
 }
 </script>
